GNOME Bugzilla – Bug 790904
Failed to locate meson executable for build pipeline
Last modified: 2018-01-11 10:46:35 UTC
I'm using Debian 9, so I installed Meson using pip3. It install Meson in .local, but gnome-builder's terminal, using local operating system as build environment, just not found meson command.
What is the output of the terminal command "which meson"?
First off, it looks like you're using our Flatpak Nightly, that has some implications on how we can launch processes. Secondly, if you're installing meson on your host, I'm guessing that you aren't trying to build inside a target Flatpak runtime, but instead on the host? In this configuration, the problem is that we don't get to inherit $PATH from your shell or any of that. We have to explicitly set $PATH when running on the host system. For that reason, we default to a $PATH of "/usr/bin:/bin". That means when the build system tries to locate the path of Meson, it does not find it. What I think we can do (and have done in some other cases), is allow you to inform the build configuration of the location with a "MESON" environment variable. I'd rather do that than add ~/.local/bin to $PATH (which isn't even guaranteed to be the correct XDG dir, and I don't want to have to sniff that).
Created attachment 364542 [details] [review] meson: allow specifying $MESON in build configuration If meson is located in a non-standard system $PATH, we might have trouble locating it. This patch teaches the Meson build pipeline integration to use the path specified in $MESON before using the default value of "meson".
Attachment 364542 [details] pushed as bdd774d - meson: allow specifying $MESON in build configuration
Running 'which meson' in my box, found meson at /usr/local/bin. As for your comment: " we default to a $PATH of "/usr/bin:/bin" " Is it correct to add "/usr/local/bin"?
(In reply to Daniel Espinosa from comment #5) > Is it correct to add "/usr/local/bin"? I don't think so, but you can try to convince me otherwise. I don't consider the "Host" runtime to be a haphazard conglomerate of random paths, but the actual host operating system.
-- GitLab Migration Automatic Message -- This bug has been migrated to GNOME's GitLab instance and has been closed from further activity. You can subscribe and participate further through the new bug through this link to our GitLab instance: https://gitlab.gnome.org/GNOME/gnome-builder/issues/312.