meson: allow specifying $MESON in build configuration

If meson is located in a non-standard system $PATH, we might have trouble
locating it. This patch teaches the Meson build pipeline integration to
use the path specified in $MESON before using the default value of "meson".

https://bugzilla.gnome.org/show_bug.cgi?id=790904